Migrate away from Art Processors github
