# spec/userdata-swagger.yaml
@@ -3,11 +3,10 @@ info:
   description: User Data service for storing and querying user interactions.
   title: User Data Service
   contact:
-    email: support@artprocessors.net
+    email: stephram@gmail.com
   license:
-    name: Art Processors Pty. Ltd.
-    url: https://www.artprocessors.net/licensing
-  version: 1.0.0
+    name: Stephen Graham
+  version: 1.0.1
 schemes:
   - http
 securityDefinitions:
@@ -307,7 +306,7 @@ definitions:
   GameOnResults:
     type: object
     properties:
-      baseballPoints:
+      basketballPoints:
         type: number
       classicCatchVideo:
         type: string
